--- a/scss/custom/_custom.scss
+++ b/scss/custom/_custom.scss
@@ -34,8 +34,12 @@ body {
   border: 5px solid rgba(white, .5);
   margin: 0;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: hidden;
   padding: 0;
+
+  @media (max-height: ($height-min * 2)) {
+    overflow-y: auto;
+  }
 
   @media (max-height: $height-min) {
     background: url('../images/bg.jpg') no-repeat center center;
